plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

group 'org.fillouh'
version '1.0'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.0'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'org.fillouh.fh_mediaplayer'
    mainClass = 'org.fillouh.fh_mediaplayer.Launcher'
}

javafx {
    version = '17.0.6'
    modules = ['javafx.controls', 'javafx.fxml','javafx.media']
}

dependencies {

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation 'org.openjfx:javafx-media:21.0.2'
    implementation 'org.openjfx:javafx-controls:17'
    implementation 'org.openjfx:javafx-fxml:17'

    def platform = org.gradle.internal.os.OperatingSystem.current()
    if (platform.isWindows()) {
        implementation 'org.openjfx:javafx-graphics:17:win'
    } else if (platform.isLinux()) {
        implementation 'org.openjfx:javafx-graphics:17:linux'
    } else if (platform.isMacOsX()) {
        implementation 'org.openjfx:javafx-graphics:17:mac'
    }
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}


shadowJar {
    archiveBaseName.set('FH_MediaPlayer')
    archiveClassifier.set('')
    archiveVersion.set('1.0')

    manifest {
        attributes 'Main-Class': 'org.fillouh.fh_mediaplayer.Launcher'
    }
    mergeServiceFiles()
}

manifest {
    attributes 'Main-Class': 'org.fillouh.fh_mediaplayer.Launcher'
}

run {
    jvmArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}
